# RingAttention

./: .gitmodules  CMakeLists.txt  README.md  makefile
csrc/: kernel_traits.h  ring.h  ring_attention.cu  self_attention.py  utils.cpp  utils.h
test/: cublas  cublas_test.cu  nccl  ring_attention_with_nccl.cu  ring_attention_with_nvshmem.cu
